--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      body {
+      background-color: lightblue;
+      }
+    </style>
+  </head>
+  <body>
     <h style="font-size:50px">Test</h>
     <p>test</p>
-  </head>
+  </body>
 </html>
