--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <style>
-      body {
+      div {
       background-color: lightblue;
       }
     </style>
   </head>
   <body>
-    <h style="font-size:50px">Test</h>
+    <div>
+      <h style="font-size:50px">Test</h>
+    </div>
     <p>test</p>
   </body>
 </html>
