--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <style>
       div {
-      background-color: lightblue;
+      background-color: green;
+      border: 5px solid #006400;
       width: 200px;
       }
     </style>
