--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       div {
       background-color: green;
       border: 5px solid #006400;
-      width: 200px;
+      width: 210px;
+      padding: 10px;
       }
     </style>
   </head>
