--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <style>
       div {
+      position: sticky;
       background-color: green;
       border: 5px solid #006400;
       width: 190px;
