--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <style>
       div {
-      position: sticky;
+      position: fixed;
       background-color: green;
       border: 5px solid #006400;
-      width: 190px;
       }
     </style>
   </head>
