--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       div {
-      position: fixed;
+      position: sticky;
       background-color: green;
       border: 5px solid #006400;
       }
