--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       position: sticky;
       background-color: green;
       border: 5px solid #006400;
+      text-align: center;
       }
     </style>
   </head>
